--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,3 +36,5 @@ tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
+
+tasks.register("prepareKotlinBuildScriptModel")
